--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
   "homepage": "https://github.com/jmartsch/processwire-social-login/",
   "type": "pw-module",
   "require": {
+    "php": ">=5.3.0",
+    "hari/pw-module": "~1.0",
     "facebook/graph-sdk": "5.4"
   },
   "license": "GNU/GPL v2",
